--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,4 +40,4 @@ jobs:
           context: ./
           file: ./Dockerfile
           push: false
-          tags: alfredodeza/flask-app:latest
+          tags: pngigena/flask-app:latest
