--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,4 +41,4 @@ jobs:
           context: ./
           file: ./Dockerfile
           push: true
-          tags: alfredodeza/flask-app:latest
+          tags: pngigena/flask-app:latest
